-- 1.0.3 DUE 2007 October
: Modify translations, no longer "five" most recent bugs
TODO: copy magic quotes warning to admin side
TODO: URL preservation through login

-- 1.0.2 2007 September - A catchup release
: Fixed static method call, for php5/jpgraph 2.2
: Applied various patches from sourceforge
: Validated CCS and HTML syntax 
: Temporarily disabled "mass_update" footer on query, until fixed.
: Changed bug layout to put the description of the bug first, before metadata

-- 1.x devel -- 
: Moved priority levels into a table
: Changed the 'Assignable' bit to a group permission
: Added sort-order to components and versions
: Added support to bookmark/monitor a set of bugs
: Added a simple UI to edit group permissions
: Added support to (re)edit a query
: Added support for sending smtp mail
: Made the group "User" less special
: Fixed some permissions related issues for project admins
: Added "priority" and "dependency" to the bug history
: Added the ability to update several bugs at once
: Allow admins and project admins to delete bugs
: Allow admins and project admins to change reporter
: Added support to mark bugs as duplicates of each other
: Added several new permissions and a set of "user roles"

-- 1.0.1 -- 14 September 2005
: Fixed mysqli database adapter. 

-- 1.0 -- 3 Aug 2005
: Added links from project summary on home page (Phil Davis).
: Added display of the bug ids a bug blocks.
: Allow users to suppress the update email when changing a bug.
: Use localized strings in bug history.
: Allow users to override saved queries by saving a new query with the same
  name as an old one.
: Added client-side validation to admin pages.
: Allow admins to delegate power to developers, on a per-project basis.
: Added ability to disable all email sent from the system.
: Fixed a bug with not being able to change the name of the 'Developer' group.
: Added tracking of changes in priority to the bug history.